--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: build
 
 on: [push, pull_request]
+    branches:
+          - main
+          - dev
 
 jobs:
   build:
@@ -27,8 +30,3 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             python setup.py install
-        - name: Test and generate coverage report on Linux
-          run: |
-            pip install pytest
-            pip install pytest-cov
-            pytest --cov=./ --cov-report=xml
