--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,13 @@
 name: build
 
-on: [push, pull_request]
-    branches:
+on: 
+    push:
+        branches:
           - main
           - dev
+    pull_request:
+        branches:
+          - main
 
 jobs:
   build:
