--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,13 @@
 name: "docs"
 
-on: [push, pull_request]
-    branches:
+on: 
+    push:
+        branches:
           - main
           - dev
+    pull_request:
+        branches:
+          - main
 
 jobs:
   docs:
