--- a/.github/workflows/draft-pdf.yml
+++ b/.github/workflows/draft-pdf.yml
@@ -1,9 +1,13 @@
 name: "paper"
 
-on: [push, pull_request]
-    branches:
+on: 
+    push:
+        branches:
           - main
           - dev
+    pull_request:
+        branches:
+          - main
 
 jobs:
   paper:
