--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
 
       strategy:
         matrix:
-          os: [ubuntu-latest]
+          os: [ubuntu-latest, windows-latest, macos-latest]
 
       env:
         OS: ${{ matrix.os }}
