--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,5 @@ jobs:
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
+            pip install -r requirements.txt
             python setup.py install
